--- a/Array.html
+++ b/Array.html
@@ -11,7 +11,6 @@
 
 <body>
 
-	<input id="myInput" type="text" value="test" />
 
 	<button id="textChanger">Change the text</button>
 
@@ -19,13 +18,22 @@
 
 	<script type="text/javascript">
 
-	var newText=document.getElementById("myInput").value;
+	var myArray=new Array();
+
+	myArray[0]="pizza";
+	myArray[1]="chocolate";
+	
+	myOtherArray=["rain","sunshine"];
+
+	myOtherArray.push("snow");//adds snow to Array
+
+	myOtherArray.splice("1, 0, "hail");
+
+	console.log(myOtherArray);
 
 	document.getElementById("textChanger").onclick=function() {
 
-	newText=document.getElementById("myInput").value;
-
-	document.getElementById("firstDiv").innerHTML=newText;
+	document.getElementById("firstDiv").innerHTML=myArray[1];
 
 	}
         
